<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/profile_label"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_profile"
            android:textColor="#2196f3"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--patient id-->
        <TextView
            android:id="@+id/patient_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/patient_unique_id"
            android:textColor="#2196f3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_label" />

        <EditText
            android:id="@+id/patient_id_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_id"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/patient_id_label"
            app:layout_constraintTop_toBottomOf="@id/patient_id_label" />

        <!--        Device Fragment-->
        <TextView
            android:id="@+id/device_heading_label"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/device"
            android:textColor="#2196f3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/patient_id_input"
            app:layout_constraintTop_toBottomOf="@id/patient_id_input" />


        <EditText
            android:id="@+id/patient_device_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_device_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/device_heading_label"
            app:layout_constraintTop_toBottomOf="@+id/device_heading_label" />


        <TextView
            android:id="@+id/medication_label"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/medication"
            android:textColor="#2196f3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/patient_id_input"
            app:layout_constraintTop_toBottomOf="@+id/patient_device_input" />


        <EditText
            android:id="@+id/medication_no_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_of_prescribed_medication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/device_heading_label"
            app:layout_constraintTop_toBottomOf="@+id/medication_label" />

        <EditText
            android:id="@+id/medication_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/name_of_prescribed_medication_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/device_heading_label"
            app:layout_constraintTop_toBottomOf="@+id/medication_no_input" />

        <!-- Server Heading -->
        <TextView
            android:id="@+id/server_heading_label"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/server"
            android:textColor="#2196f3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/patient_device_input"
            app:layout_constraintTop_toBottomOf="@+id/medication_name_input" />


        <EditText
            android:id="@+id/server_address_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_server_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/server_heading_label"
            app:layout_constraintTop_toBottomOf="@+id/server_heading_label" />

        <!--Save Button-->

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="224dp"
            android:layout_height="56dp"
            android:layout_marginVertical="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textSize="24sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/server_address_input"
            app:strokeColor="#000000"
            app:strokeWidth="8dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>