<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="#D3D3D3"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/select_diary_date"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:textColor="#2196f3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/date_tv"
            app:layout_constraintEnd_toStartOf="@+id/date_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/date_tv" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_border"
            android:padding="10dp"
            tools:text="12 May 2016"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/home_title"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/ic_border_no_left"
            android:padding="10dp"
            android:contentDescription="@string/calendar_icon_border"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="@+id/date_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/date_tv"
            app:layout_constraintTop_toTopOf="@+id/date_tv" />


        <LinearLayout
            android:id="@+id/dairy_headings_1"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_title">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/time"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/asleep"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/on_text"
                android:textStyle="bold" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/on_with_troublesome_dyskinesia"
                android:textStyle="bold" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/on_without_troublesome_dyskinesia"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/off_text"
                android:textStyle="bold" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/med_1_status"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/med_2_status"
                android:textStyle="bold" />

            <!-- New Measurement column -->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/ic_header_item_bg"
                android:gravity="center"
                android:text="@string/rate_your_symptom_from_0_to_100"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dairy_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dairy_headings_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
